# Fan_Anomaly_Detection

./: .gitignore  CMakeLists.txt  README.md  README.txt
main/: CMakeLists.txt  Fan_Anomaly_Detection.cpp  ei_porting_esp32.cpp
main/edge-impulse-sdk/dsp/dsp_engines/: ei_esp_dsp.h
main/tflite-model/: tflite-resolver.h  tflite_learn_864247_3.h
model-parameters/: model_metadata.h  model_variables.h
tflite-model/: tflite_learn_864247_3.h  tflite_learn_864247_3.tflite
